--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Logan Dobson - Biography</title>
 </head>
 <body>
-    <h1>Logan Dobson - Biography</h1>
+    <header>
+        <h1>Logan Dobson - Biography</h1>
+        <p>The Man, The Myth, The Legend</p>
+    </header>
+
+    <section>
+        <h2>The Biography</h2>
+        <p>
+            In 2002 I was born in Collingwood Ontario, 
+        </p>
+    </section>
 </body>
 </html>
