--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logan Dobson - Biography</title>
 </head>
+
 <body>
     <header>
         <h1>Logan Dobson - Biography</h1>
@@ -15,8 +17,23 @@
     <section>
         <h2>The Biography</h2>
         <p>
-            In 2002 I was born in Collingwood Ontario, 
+            In 2002 I was born in Collingwood Ontario, I currently live in Collingwood as well and i commute to attend my classes.
+            I grew up in Creemore Ontario, (you probably havent heard of it) It is a small town near Stayner and is most known for
+            Creemore Springs.
+
+        </p>
+    </section>
+    <section>
+        <h2>What schools have I attended?</h2>
+        <p>
+            Since i grew up in Creemore I attended the local Elementary school NCPS which stands for Nottawasaga Creemore 
+            Public School. It is a very Small school of about 100-200 students. At the end of grade 5 my family moved to
+            Brampton, The School I attended was called Williams Parkway Sr. Public School. It was a huge difference as it
+            had about 1400 students and went from grade 6-8. For High School my family migrated north again and moved to Collingwood,
+            I attended Collingwood Collegiate Institute for my high school which I graduated in 2020
+        
         </p>
     </section>
 </body>
+
 </html>
