Added second paragraph

--- a/index.html
+++ b/index.html
@@ -30,8 +30,18 @@
             Public School. It is a very Small school of about 100-200 students. At the end of grade 5 my family moved to
             Brampton, The School I attended was called Williams Parkway Sr. Public School. It was a huge difference as it
             had about 1400 students and went from grade 6-8. For High School my family migrated north again and moved to Collingwood,
-            I attended Collingwood Collegiate Institute for my high school which I graduated in 2020
+            I attended Collingwood Collegiate Institute for my high school which I graduated in 2020.
         
+        </p>
+    </section>
+    <section>
+        <p>
+            I have made several achievments in my life, one being that I graduated high school as an ontario scholar. 
+            I was also appointed assistant manager (by my manager) at my previous job. I am also quite proud of myself 
+            for beating Elden Ring having never played a souls game beforehand
+
+
+
         </p>
     </section>
 </body>
