Finished Second Paragraph

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
         </p>
     </section>
     <section>
+        <h2>What achievments have I made?</h2>
         <p>
             I have made several achievments in my life, one being that I graduated high school as an ontario scholar. 
             I was also appointed assistant manager (by my manager) at my previous job. I am also quite proud of myself 
-            for beating Elden Ring having never played a souls game beforehand
+            for beating Elden Ring having never played a souls game beforehand. My most recent achievement is getting accepted 
+            into Computer Programming at Georgian College. I am hoping to achieve much more during my years attending this school
+            and afterwards once I graduate.
 
 
 
