Added third paragraph

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
 
         </p>
     </section>
+    <section>
+        <h2>What are my goals and ambitions?</h2>
+        <p>
+            After I finish my undergrad, I want to pursue a post-graduate certificate in CyberSecurity, thus allowing me to get a 
+            well-paying job that will support me in the future. Another goal of mine is to eventually open my own business, 
+            however, I am unsure of what kind. My current goal is to work on my physical health; I want to excersice 
+            more and get into shape.
+        </p>
+    </section>
 </body>
 
 </html>
